--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -201,13 +201,13 @@ dependencies {
     implementation project(':react-native-sms')
     implementation project(':react-native-screens')
     implementation project(':react-native-gesture-handler')
-    implementation project(':react-native-firebase')
+//    implementation project(':react-native-firebase')
     implementation project(':react-native-device-info')
     implementation project(':react-native-contacts')
     implementation project(':react-native-color-camera')
-    implementation "com.google.android.gms:play-services-base:16.0.1"
-    implementation "com.google.firebase:firebase-core:16.0.6"
-    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.5.0"
+    implementation "com.google.firebase:firebase-messaging:18.0.0"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
