--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.0",
     "@react-native-community/netinfo": "^3.2.1",
+    "@types/socket.io-client": "^1.4.32",
     "bluebird": "^3.5.5",
     "color": "^3.1.2",
+    "eventemitter3": "^4.0.0",
     "invariant": "^2.1.0",
     "memoize-one": "^5.0.0",
     "merge": "^1.2.0",
@@ -57,9 +59,12 @@
     "@types/color": "^3.0.0",
     "@types/create-react-class": "^15.6.2",
     "@types/jest": "^24.0.18",
+    "@types/memoize-one": "^4.1.1",
     "@types/ramda": "^0.26.21",
     "@types/react": "^16.9.2",
+    "@types/react-gateway": "^2.8.3",
     "@types/react-native": "^0.60.13",
+    "@types/react-navigation": "^3.0.8",
     "@types/react-redux": "^7.1.2",
     "@types/react-test-renderer": "^16.9.0",
     "@types/redux": "^3.6.0",
