--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -45,6 +45,8 @@ target 'ColorChat' do
   pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
   
   pod 'react-native-contacts', :path => '../node_modules/react-native-contacts'
+  
+  pod 'react-native-sms', :path => '../node_modules/react-native-sms'
 
   pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
 
